# lazy-amortised-analysis

./: LICENSE  README.md  lazy-amortised-analysis.cabal  package.yaml  stack.yaml
app/: Runanalysis.hs
examples/: cycle.in  foldl0.in  fusion0.in  fusion1.in  hamming.in  length.in  length0.in  length1.in  map0.in  map1.in  queue0.in  repeat0.in  repeat1.in  split.in
src/: Analysis.hs  Cost.hs  DamasMilner.hs  Main.hs  Options.hs  Parser.hs  Pretty.hs  Term.hs  Types.hs
