name:                lazy-amortised-analysis
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Pedro Vasconcelos
maintainer:          pbv@dcc.fc.up.pt
copyright:           2017 Pedro Vasconcelos
category:            Research
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable runanalysis
  hs-source-dirs:      app
                       src
  main-is:             Runanalysis.hs
  other-modules:       Analysis
                       DamasMilner
                       Pretty
                       Types
                       Parser
                       Term
                       Cost
                       Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, containers,
                       parsec, pretty, mtl, transformers, glpk-hs

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pbv/lazy-amortised-analysis
